--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -327,5 +327,10 @@ We also use device identifiers to improve analytics and tailor your in-app exper
     <string name="facebook_app_id">175146955089289</string>
     <string name="facebook_client_token">e6b3688449411d8e23741468c7bf7a66</string>
 
+    <string name="change_plan_underlined"><u>Change plan</u></string>
+
+    <string name="razorpay_key">rzp_test_xxxxxxxxx</string>
+
+
 
 </resources>
