Fixes payment gateway and login UI
- Updates payment gateway to "googlePlay" from "razorpay" in SubscriptionCheckoutActivity.
- Modifies MobileLoginActivity:
    - Increases OTP resend timer from 30 to 60 seconds.
    - Adjusts UI elements for the resend timer and OTP verification button.
    - Clears email value when creating a new user.
- Updates Razorpay test key and adds a "Change" string resource.
- Refines layout spacing and styles in the login and image slider screens.
and Below Issues Fixed
RAD - 6355
RAD - 6361
6366
6365
6363
6360
6339
6340
6341
6342

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -331,8 +331,8 @@ We also use device identifiers to improve analytics and tailor your in-app exper
 
     <string name="change_plan_underlined"><u>Change plan</u></string>
 
-    <string name="razorpay_key">rzp_test_xxxxxxxxx</string>
-
+    <string name="razorpay_key">rzp_test_RqEmfR1seJQbMB</string>
+    <string name="change_text"><u>Change</u></string>
 
 
 </resources>
