--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -334,6 +334,8 @@ We also use device identifiers to improve analytics and tailor your in-app exper
 
 
     <string name="change_text"><u>Change</u></string>
+    <string name="view_all"><u>View All</u></string>
+
 
 
 </resources>
