--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -336,6 +336,6 @@ We also use device identifiers to improve analytics and tailor your in-app exper
     <string name="change_text"><u>Change</u></string>
     <string name="view_all"><u>View All</u></string>
 
-
+    <string name="tasks_completed_format">%1$d of %2$d tasks completed</string>
 
 </resources>
