--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -338,4 +338,7 @@ We also use device identifiers to improve analytics and tailor your in-app exper
 
     <string name="tasks_completed_format">%1$d of %2$d tasks completed</string>
 
+    <string name="sleep_duration_zero">0 hrs 0 mins</string>
+    <string name="sleep_duration_format">%1$d hrs %2$d mins</string>
+
 </resources>
